fixed image width on mobile

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -57,8 +57,8 @@ body {
     margin: 1% auto 5%;
 
     img {
-      max-width: 20em;
-      min-height: 60vh;
+      max-width: 18em;
+      min-height: 50vh;
     }
   }
 }
